// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders correctly with default props and caption and credit text 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin-bottom: 16px;
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  color: #2e2e2e;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-2 svg {
  fill: #2e2e2e;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-3 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  text-transform: uppercase;
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  letter-spacing: 0.5px;
}

.emotion-3 svg {
  fill: #535353;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4458333333333334em;
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5458333333333334em;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <p
        class="emotion-2"
      >
        test
      </p>
    </div>
    <p
      class="emotion-3"
    >
      this is credit text
    </p>
  </div>
</DocumentFragment>
`;

exports[`CaptionInset renders correctly with default props and caption and credit text 1`] = `
<DocumentFragment>
  @media screen and (max-width: 767px) {
  .emotion-0 {
    padding: 16px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    padding: 24px;
  }
}

.emotion-1 {
  margin-bottom: 16px;
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  color: #2e2e2e;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-2 svg {
  fill: #2e2e2e;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-3 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  text-transform: uppercase;
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  letter-spacing: 0.5px;
}

.emotion-3 svg {
  fill: #535353;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4458333333333334em;
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5458333333333334em;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <p
        class="emotion-2"
      >
        test
      </p>
    </div>
    <p
      class="emotion-3"
    >
      this is credit text
    </p>
  </div>
</DocumentFragment>
`;

exports[`CaptionInset renders correctly with default props and only caption text 1`] = `
<DocumentFragment>
  @media screen and (max-width: 767px) {
  .emotion-0 {
    padding: 16px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    padding: 24px;
  }
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  color: #2e2e2e;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-2 svg {
  fill: #2e2e2e;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <p
        class="emotion-2"
      >
        test
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CaptionInset renders correctly with overriden props and caption and credit text 1`] = `
<DocumentFragment>
  @media screen and (max-width: 767px) {
  .emotion-0 {
    padding: 16px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    padding: 24px;
  }
}

.emotion-1 {
  margin-bottom: 64px;
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 24px;
  line-height: 1.1666666666666667;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-2 svg {
  fill: #0a0a0a;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.1958333333333334em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.2958333333333334em;
}

.emotion-3 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
  text-transform: uppercase;
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  letter-spacing: 0.5px;
}

.emotion-3 svg {
  fill: #0a0a0a;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4458333333333334em;
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5458333333333334em;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <p
        class="emotion-2"
      >
        test
      </p>
    </div>
    <p
      class="emotion-3"
    >
      this is credit text
    </p>
  </div>
</DocumentFragment>
`;

exports[`renders correctly with default props and only caption text 1`] = `
<DocumentFragment>
  .emotion-2 {
  margin: 0;
  padding: 1px 0;
  color: #2e2e2e;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-2 svg {
  fill: #2e2e2e;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-0"
    >
      <p
        class="emotion-2"
      >
        test
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders correctly with overriden props and caption and credit text 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin-bottom: 64px;
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 24px;
  line-height: 1.1666666666666667;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-2 svg {
  fill: #0a0a0a;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.1958333333333334em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.2958333333333334em;
}

.emotion-3 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
  text-transform: uppercase;
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  letter-spacing: 0.5px;
}

.emotion-3 svg {
  fill: #0a0a0a;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4458333333333334em;
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5458333333333334em;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <p
        class="emotion-2"
      >
        test
      </p>
    </div>
    <p
      class="emotion-3"
    >
      this is credit text
    </p>
  </div>
</DocumentFragment>
`;
